# pdfcompress

./: .gitignore  PKGBUILD  README.md  pyproject.toml  qhinttextcombobox.py
src/gs_pdf_compress/: __init__.py  pdfcompress.py  pdfcompress_qt.py  pdfcompressor.py
src/gs_pdf_compress/res/: com.github.clorteau.pdfcompress.desktop
